Fix search results overflow on urls and header icon margins

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,7 @@ header {
 
 .navbar-left-container svg {
   font-size: 2.2rem;
+  margin-bottom: -4px;
 }
 
 .navbar-left-container a:link, 
@@ -216,7 +217,7 @@ ul button:hover {
 
 .media-content {
   flex: 4 1 180px;
-  margin-right: 10px;
+  width: 100%;
 }
 
 .resource-img {
@@ -231,6 +232,7 @@ ul button:hover {
 
 .website-link {
   font-size: 0.85rem;
+  overflow-wrap: break-word;
 }
 
 .card h2 {
@@ -495,6 +497,7 @@ textarea::placeholder {
 
   .website-link {
     font-size: 0.9rem;
+    overflow-wrap: break-word;
   }
 
   .card h2 {
@@ -517,6 +520,10 @@ textarea::placeholder {
   
   .card svg {
     font-size: 0.9rem;
+  }
+
+  .media-content {
+    margin-right: 10px;
   }
 
   .category-card:hover {
